05-Nov-2013 Added new version of Location.SubDirectory which takes a Location.EExists flag. This can be useful to build up paths that will be created eventually.

05-Nov-2013 Added Opus.Core.EPlatform.NotWindows, NotUnix, and NotOSX, to allow exclusions of a single platform in target attributes.

05-Nov-2013 RequiredModule dependencies in Xcode projects are now represented as an optional link dependency. Deadstripping ought to resolve the extra size, and optional means that dyld will not attempt to load it at executable launch.

04-Nov-2013 Added new C OutputFileFlags, OSXBundle, OSXBundleContents and OSXBundleMacOS, for OSX application bundle builds, referring to the .app, .app/Contents, and .app/Contents/MacOS folders, respectively.

03-Nov-2013 Added Mingw-4.8.1

02-Nov-2013 Release 0.50 Alpha 6

02-Nov-2013 Removed Opus.Core.File. Use Opus.Core.Location or FileLocation as a replacement.

02-Nov-2013 Removed deprecated Opus.Core.Exception(string,System.Exception)

01-Nov-2013 Added Qt-4.8.5 package.

31-Oct-2013 Reworked the Opus.Core.Location API and usage. Location is an abstract base class. FileLocation is a subclass, and represents a single file. DirectoryLocation is a subclass, and represents a single directory. ScaffoldLocation is a subclass, and represents an ambiguous number of files or directories. Calling GetLocations() on a ScaffoldLocation returns a resolved list of Locations. Many File and Directory storage cases have been revised to use Locations, and some APIs have been broken in the process. Particularly, the Include/Exclude mechanism now only accepts a single pattern string, rather than a variable length array of subpaths.

31-Oct-2013 Added Opus.Core.Array<T>.SubArray, taking the index of the first element, and a count.

23-Oct-2013 Release 0.50 Alpha 5
